[package]
name = "blackjack"
version = "0.1.0"
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
lazy_static = "1.4.0"
rand = "0.7.2"
console = "0.9.0"
dialoguer = "0.4.0"

[[bin]]
name = "blackjack"
path = "src/bin/main.rs"
doc = false

[lib]
name = "blackjack"